# boilerplate-research-ai

./: .gitignore  CHANGELOG.md  Makefile  README.md  alembic.ini  pyproject.toml
app/: main.py
app/core/: config.py
app/schemas/: user.py
docker/: docker-compose.yml
scripts/: text_to_database.py
