[tool.poetry]
name = "template-research-project"
version = "0.1.0"
description = ""
authors = ["Robin Marquet <robin.marquet@epitech.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.40"
pandas = "^1.4.4"
tqdm = "^4.64.0"
jupyterlab = "^3.4.7"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
autoflake = "^1.5.3"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
